--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta property="og:title" content="SpaceGeek" />
     <meta property="og:description" content=" Project Space" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="hello" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="hello" />
+    <meta name="twitter:image" content="hello" />
   </head>
 
   <body>
